[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Sprout Lands - Sprites - Basic pack/Objects/Egg_item.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 31.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( -22, -21 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DashEgg1" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="DashEgg2" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 31.0
margin_right = 63.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="DashEgg3" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 62.0
margin_right = 94.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="DashEgg4" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 93.0
margin_right = 125.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="DashEgg5" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 124.0
margin_right = 156.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
